@startuml

class Configuration {
    }

class Event {
    }

class Main extends Application {

}

class PatientInfo  {
    }

class Person {
    }

class Simulation {
    }

class State {
    }

class StateMachine {
}

class StateMachineVisualizer extends Application {
   }

class TimeSimulator {
    }

class Transition {
    }

Configuration --> Simulation
Simulation --> State
Simulation --> Transition
Transition --> State : source
Transition --> State : target
Transition --> Event
State --> Person
PatientInfo --> Person
Main <-- Configuration
Main <-- Simulation
Main <-- State
Main <-- Transition
Main <-- Event
Main <-- StateMachine
Main <-- Person

TimeSimulator --> StateMachine
StateMachine -- StateMachineVisualizer

@enduml
